--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "heroku": "^7.24.3",
+    "heroku-cli": "^7.0.9"
   },
   "devDependencies": {},
   "autoload": {
