--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "adonis-fullstack-app",
+  "name": "adonis-slim-app",
   "version": "4.1.0",
   "adonis-version": "4.1.0",
-  "description": "The fullstack application boilerplate for Adonisjs",
+  "description": "Smallest possible application for adonisjs",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
@@ -17,19 +17,10 @@
   "private": true,
   "dependencies": {
     "@adonisjs/ace": "^5.0.8",
-    "@adonisjs/auth": "^3.0.7",
-    "@adonisjs/bodyparser": "^2.0.5",
-    "@adonisjs/cors": "^1.0.7",
     "@adonisjs/fold": "^4.0.9",
     "@adonisjs/framework": "^5.0.9",
-    "@adonisjs/ignitor": "^2.0.8",
-    "@adonisjs/lucid": "^6.1.3",
-    "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8",
-    "heroku": "^7.24.3",
-    "heroku-cli": "^7.0.9"
+    "@adonisjs/ignitor": "^2.0.8"
   },
-  "devDependencies": {},
   "autoload": {
     "App": "./app"
   }
